--- a/more.mdx
+++ b/more.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Just Testing '
+title: 'Just Testing aaaaaaa '
 date: '2023-04-28'
 tags: ['next.js','nextjs','new']
 ---
@@ -26,3 +26,7 @@ You should ask yourself: "Can I pre-render this page **ahead** of a user's reque
 On the other hand, Static Generation is **not** a good idea if you cannot pre-render a page ahead of a user's request. Maybe your page shows frequently updated data, and the page content changes on every request.
 
 In that case, you can use **Server-Side Rendering**. It will be slower, but the pre-rendered page will always be up-to-date. Or you can skip pre-rendering and use client-side JavaScript to populate data.
+
+You should ask yourself: "Can I pre-render this page **ahead** of a user's request?" If the answer is yes, then you should choose Static Generation.
+
+You should ask yourself: "Can I pre-render this page **ahead** of a user's request?" If the answer is yes, then you should choose Static Generation.
