Update Mlflow from my point of view.mdx

--- a/Mlflow from my point of view.mdx
+++ b/Mlflow from my point of view.mdx
@@ -5,7 +5,7 @@ tags: ['Machine learning','Deep learning','MLOps','Mlflow']
 ---
 
 Mlflow is consists of multiple blocks with multiple functionality which help us to simplifying the ML workflow.
-In simpler word.Mlflow will help us in various stage of our ML development and deployment.
+In simpler word, Mlflow will help us in various stage of our ML development and deployment.
 
 Given below are key functionally offered by Mlflow
 
